# energy-forecasting

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
configs/feature_params/: features.yaml
data/produced/: predictions.csv
models/: cross_val_scores.json  model_MLPRegressor.pkl  opt_results.json
notebooks/: data-exploration-and-forecasting.ipynb  guide-to-use-the-package.ipynb  model.json
src/energy_forecasting/: __main__.py  model_params_optimizer.py  optimizer_pipeline.py  predict_pipeline.py  train_pipeline.py
src/energy_forecasting/conf/: config.yaml
src/energy_forecasting/conf/feature_params/: feature_params.yaml
src/energy_forecasting/conf/optimizer_params/: nn.yaml  rf.yaml
src/energy_forecasting/conf/path_config/: path_config.yaml
src/energy_forecasting/conf/pipeline/: optimize.yaml  predict.yaml  train.yaml
src/energy_forecasting/conf/predict_params/: predict_params.yaml
src/energy_forecasting/conf/splitting_params/: splitting_params.yaml
src/energy_forecasting/conf/train_params/: logreg.yaml  lr.yaml  nn.yaml  rf.yaml
src/energy_forecasting/data/: __init__.py  make_dataset.py
src/energy_forecasting/entities/: __init__.py  feature_params.py  optimizer_params.py  optimizer_pipeline_params.py  path_params.py  predict_params.py  predict_pipeline_params.py  split_params.py  train_params.py  train_pipeline_params.py
src/energy_forecasting/features/: __init__.py  build_features.py
src/energy_forecasting/models/: __init__.py  cross_val_scores.json  model_LinearRegression.pkl  model_RandomForestRegressor.pkl  predict_model.py  train_model.py
src/energy_forecasting/utils/: __init__.py  utils.py
tests/: conftest.py  synthetic_data.csv  test_predict_pipeline.py  test_utils.py
