[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-forecasting"
description = ""
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies", "optional-dependencies", "version"]

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[tool.setuptools_scm]
write_to = "src/energy_forecasting/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"energy_forecasting" = [
    "py.typed",
    "conf/*",
    "conf/feature_params/*",
    "conf/optimizer_params/*",
    "conf/path_config/*",
    "conf/pipeline/*",
    "conf/predict_params/*",
    "conf/splitting_params/*",
    "conf/train_params/*",
]

[project.scripts]
energy_forecasting = "energy_forecasting.__main__:main"

[tool.ruff]
select = [
    # pycodestyle
    "E",
    # pyflakes
    "F",
    # pydocstyle
    # "D",
    # flake8-bandit
    "S",
    # pyupgrade
    "UP",
    # pep8-naming
    "N",
    # isort
    "I001",
]
# Error E501 (Line too long) is ignored because of docstrings.
ignore = [
    "S101",
    "S301",
    "S311",
    "D100",
    "D200",
    "D203",
    "D205",
    "D401",
    "E501",
    "N812",
    "E712",
    "E722"
]
extend-exclude = ["examples/*.py", "test/*.py", "tests/*.py", "setup.py"]
target-version = "py39"
force-exclude = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
known-first-party = [
    "energy_forecasting",
    "energy_forecasting.*"
]

[tool.black]
preview = true
target-version = ['py39', 'py310', 'py311']

[tool.docformatter]
close-quotes-on-newline = true # D209

[tool.interrogate]
fail-under = 80
ignore-module = true
ignore-nested-functions = true
ignore-private = true
exclude = ["tests", "setup.py"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "-p no:warnings"
